reimpostazione e fix voci navbar aggiunta collapse impara con progetti reali e supporto al lavoro

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -9,14 +9,33 @@
     max-width: 100%;
 }
 
-.immagineHero2 {
-  width: 100%;
-  max-width: 520px;
-  height: auto;
-  align-self: flex-end; /* la spinge in basso */
+
+.hero-wrapper {
+  position: relative; // fondamentale per l'overlay assoluto
+  overflow: hidden;
+
+  @media (max-width: 576px) {
+    overflow: visible;
+  }
 }
 
-.hero-bg .col-lg-6:first-child {
-  display: flex;
-  align-items: flex-end;
+.hero-bg{
+  background: url("../../assets/img/backgroundHero.webp") center/cover no-repeat;
+  min-height: 100vh;
+
+
+@media (max-width: 992px){
+    min-height: 70vh;
+    background-position: 70% center;
+  }
+
+  @media (max-width: 576px) {
+    min-height: 100svh;
+    background-size: cover;
+    background-position: 65% center;
+    display: flex !important;
+    align-items: center !important;
+    padding-bottom: 3rem; 
+  }
+
 }
